Rewrote SMUS to use the new inc/dec MaxSAT solver